# co-captain-git-agent

./: .gitignore  AGENT.md  CHARTER.md  DOCKSIDE-EXAM.md  README.md  cli.py  co_captain.py  dispatcher.py  fleet_manager.py  human_interface.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cli.py  test_co_captain.py  test_co_captain_agent.py  test_dispatcher.py  test_fleet_manager.py  test_human_interface.py
